--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
 <body>
     <p>welcome to chat app</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./js/index.js"> </script>
 </body>
 
 </html>
