--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,18 @@
 </head>
 
 <body>
+    <ol id='messages'></ol>
     <p>welcome to chat app</p>
+    <form id="message-form">
+        <input name="message" placeholder="Message" type="text"/>
+        <button>
+            Send
+        </button>
+    </form>
+    <script src="./js/libs/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/index.js"> </script>
+
 </body>
 
 </html>
