--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
             Send
         </button>
     </form>
+    <button id="send-location">
+        Send Location
+    </button>
     <script src="./js/libs/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/index.js"> </script>
