--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-
 <html>
+
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
+  <title>Join | ChatApp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
-    <ol id='messages'></ol>
-    <p>welcome to chat app</p>
-    <form id="message-form">
-        <input name="message" placeholder="Message" type="text"/>
-        <button>
-            Send
-        </button>
+<body class="centered-form">
+  <div class="centered-form__form">
+    <form action="./chat.html">
+      <div class="form-field">
+        <h3>Join a Chat<h3>
+      </div>
+      <div class="form-field">
+        <label>Display name</label>
+        <input type="text" name="name" autofocus/>
+      </div>
+      <div class="form-field">
+        <label>Room name</label>
+        <input type="text" name="room"/>
+      </div>
+      <div class="form-field">
+        <button>Join</button>
+      </div>
     </form>
-    <button id="send-location">
-        Send Location
-    </button>
-    <script src="./js/libs/jquery-3.3.1.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./js/index.js"> </script>
-
+  </div>
 </body>
 
 </html>
